--- a/01. Mô hình mạng và bộ chuyển đổi có dây.md
+++ b/01. Mô hình mạng và bộ chuyển đổi có dây.md
@@ -1,1 +1,57 @@
+# Mô hình mạng và bộ chuyển đổi có dây
+
+# Mục lục
+
+* [1. Mô hình mạng ](#1)
+
+---
+
+<a name = '1'></a>
+
+## 1. Mô hình mạng
+
+- Có hai mô hình mạng hay được sử dụng và ứng dụng theo mục đích. 
+    - Mô hình OSI là công cụ được dùng giải thích các khái niệm chi tiết về mạng và xử lý sự cố. 
+    - Mô hình TCP/IP là mô hình thu gọn lại theo cách hoạt động của mạng. 
+- Tùy theo mục đích công việc mà ta chọn một trong hai mô hình
+    - Khi thảo luận về các lớp của mô hình, ta thường sử dụng `mô hình OSI`
+    - Khi thảo luận về các giao thức, ta thường chọn `mô hình TCP/IP`
+- Mô tả về hai mô hình 
+    - Mô hình OSI
+
+| Lớp | Chức năng |
+| ---- | -------- |
+| Application (7) | Kết nối giao diện giữa mạng và phần mềm ứng dụng, bao gồm cả dịch vụ xác thực. |
+| Presentation (6) | Xác định định dạng và nén dữ liệu, bao gồm mã hóa dữ liệu. | 
+| Session (5) | Thiết lập và duy trì các dòng hai chiều đầu cuối giữa các điểm cuối. Bao gồm quản lý các luồng giao dịch. |
+| Transport (4) | Cung cấp nhiều dịch vụ giữa hai máy chủ, bao gồm cả thiết lập kết nối và chấm dứt, kiểm soát tốc độ, phục hồi lỗi và chia nhỏ dữ liệu lớn thành các phần nhỏ hơn để truyền. |
+| Network (3) | Đề cập đến địa chỉ logic, định tuyến và xác định đường dẫn. |
+| Data link (2) | Định dạng dữ liệu từ gói (packet) ở lớp 3 thành khung (frame). Kiểm soát dữ liệu (kiểm tra lỗi, kiểm soát luồng) |
+| Physical (1) | Các thiết bị vật lí dùng điện, dây cáp, giao thức để truyền các bit đã được mã hóa từ frame |
+
+    - Mô hình TCP/IP
+
+| Lớp | Chức năng | Giao thức |
+| --- | --------- | -------- |
+| Application | Diễn giải dữ liệu tới người dùng và giao tiếp | DNS, Telnet, SMTP, POP3, DHCP, HTTP |
+| Transport | Hỗ trợ giao tiếp giữa thiết bị thông qua mạng | TCP, UDP | 
+| Internet | Xác định kết nối tốt nhất thông qua mạng | IP, ARP, ICMP |
+| Network access | Điều khiển thiết bị phần cứng để chuẩn bị kết nối đến mạng | Ethernet, Frame Relay |
+
+- Một số giao thức hay được sử dụng 
+    - DNS: phân giải địa chỉ web và domain thành IP
+    - Telnet: kiểm tra kết nối 
+    - SMTP, POP3, IMAP: giao thức gửi thư giữa khách hàng và máy chủ
+    - DHCP: Cấp phát địa chỉ IP cho khách hàng.
+    - HTTP: Chuyển đổi dữ liệu web giữa khách hàng và máy chủ 
+    - FTP: Truyền file giữa khách hàng và máy chủ.
+    - TCP: Giao thức truyền tin cậy
+    - UDP: Giao thức truyền không tin cậy, tốc độ.
+    - IP: Cung cấp địa chỉ IP duy nhất kết nối tới mạng và giao tiếp
+    - ARP: Dịch địa chỉ IP thành Hardware Address (địa chỉ MAC)
+    - ICMP: Thông báo lỗi, hỗ trợ định tuyến và quản lí quá trình hoạt động của mạng.
+
+- Port Number thường dùng: 
+
+![1](/image/2021-03-31_15-09-50.png)
 
