--- a/01. Mô hình mạng và bộ chuyển đổi có dây.md
+++ b/01. Mô hình mạng và bộ chuyển đổi có dây.md
@@ -10,6 +10,8 @@
 
 ## 1. Mô hình mạng
 
+### 1.1 Phân loại
+
 - Có hai mô hình mạng hay được sử dụng và ứng dụng theo mục đích. 
     - Mô hình OSI là công cụ được dùng giải thích các khái niệm chi tiết về mạng và xử lý sự cố. 
     - Mô hình TCP/IP là mô hình thu gọn lại theo cách hoạt động của mạng. 
@@ -55,3 +57,23 @@
 
 ![1](/image/2021-03-31_15-09-50.png)
 
+### 1.2 Thiết bị
+
+- Switches là thiết bị duy nhất dùng để kết nối thiết bị tới mạng LAN.
+- Một số lưu ý khi chọn Switch
+    - Giá thành 
+    - Đặc điểm giao diện: Số ports phải đầy đủ
+    - Lớp mạng: Switch tại lớp access yêu cầu khác với switch lớp distribution và hoặc lớp core
+- Routers là thiết bị dùng để kết nối các mạng với nhau. 
+- Một số lưu ý khi chọn Router: 
+    - Khả năng mở rộng: Dễ thay đổi khi thêm hoặc thay đổi modules
+    - Media: Xác định kiểu của interface để hỗ trợ kết nối mạng
+    - Mục đích sử dụng: Dựa vào IOS của router. Mỗi IOS khác nhau hỗ trợ đặc điểm khác nhau. 
+
+### Thiết kế mô hình mạng cấp bậc (Campus)
+- Thiết kế dựa trên phân chia chức năng của mỗi lớp trong mạng. Mỗi lớp đảm nhận một nhiệm vụ khác nhau. 
+- Mục đích của việc phân chia thành các lớp để thuận tiện trong việc mở rộng và thực hiện. 
+    - Lớp access: Phục vụ local và cung cấp từ xa cho người dùng 
+    - Lớp distribution: Kiểm soát dữ liệu giữa hai lớp access và core 
+    - Lớp core: Hoạt động với tốc độ cao, yêu cầu dữ liệu đã được xử lí trước khi đến lớp core. 
+![2](/image/2021-03-31_15-57-31.png)
