--- a/01. Mô hình mạng và bộ chuyển đổi có dây.md
+++ b/01. Mô hình mạng và bộ chuyển đổi có dây.md
@@ -4,6 +4,8 @@
 
 * [1. Mô hình mạng ](#1)
 
+* [2. Bộ chuyển đổi có dây](#2)
+
 ---
 
 <a name = '1'></a>
@@ -30,8 +32,7 @@
 | Network (3) | Đề cập đến địa chỉ logic, định tuyến và xác định đường dẫn. |
 | Data link (2) | Định dạng dữ liệu từ gói (packet) ở lớp 3 thành khung (frame). Kiểm soát dữ liệu (kiểm tra lỗi, kiểm soát luồng) |
 | Physical (1) | Các thiết bị vật lí dùng điện, dây cáp, giao thức để truyền các bit đã được mã hóa từ frame |
-
-    - Mô hình TCP/IP
+   - Mô hình TCP/IP
 
 | Lớp | Chức năng | Giao thức |
 | --- | --------- | -------- |
@@ -77,3 +78,24 @@
     - Lớp distribution: Kiểm soát dữ liệu giữa hai lớp access và core 
     - Lớp core: Hoạt động với tốc độ cao, yêu cầu dữ liệu đã được xử lí trước khi đến lớp core. 
 ![2](/image/2021-03-31_15-57-31.png)
+
+<a name = '2'></a>
+
+## 2. Bộ chuyển đổi có dây
+
+### 2.1 Chuyển đổi logic 
+- Tạo bộ chuyển đổi dựa trên địa chỉ MAC nguồn và MAC đích. Sau khi tạo được bộ chuyển đổi logic, chúng sẽ học địa chỉ MAC của nhau và tạo một môi trường lặp trống bằng cách sử dụng Spanning Tree Protocol. (STP)
+
+### 2.2 Chuyển tiếp Frame
+- Kĩ thuật chuyển đổi chuyển tiếp
+    - Store-and-forwảd swiching: Nhận frame tại bộ đệm, phân tích mỗi frame để lấy thông tin. Đánh giá dữ liệu dựa trên cyclic ređunancy check (CRC) 
+    - Cut-through switching: Chỉ đọc địa chỉ MAC đích và port để chuyển tiếp dữ liệu. Nếu switch xác định trùng với bảng địa chỉ MAC thì dữ liệu sẽ được truyền. Cách này không thể kiểm lỗi trong gói dữ liệu
+    - Fragment-free: Cách này kiểm tra lỗi tốt hơn cut-through và độ trễ không bị tăng nhiều. 
+- Symmetric switching cung cấp kết nối giữa các thiết bị có cùng tốc độ băng thông. Asymmetric swiching cung cấp kết nối giữa các thiết bị khác tốc độ băng thông. 
+- Ethernet chia lớp 2 thành 2 lớp con 
+    - Logical Link Control (LLC) sublayer: xác định bằng chuẩn 802.2
+    - Media Acces Control (MAC) sublayer: xác định bằng chuẩn 802.3 (các chuẩn cab kết nối dựa theo tốc độ truyền tải)
+- Cáp UTP: có 2 chuẩn là 568A và 568B
+- Lợi ích khi sử dụng Swiches: 
+    - 
+    
