--- a/02. Cấu hình Switch cơ bản.md
+++ b/02. Cấu hình Switch cơ bản.md
@@ -1,1 +1,76 @@
+# Cấu hình Switch cơ bản 
+
+## 1. Accessing and Navigating the Cisco IOS
+
+#### Connecting to Cisco Devices
+- Có 2 cách kết nối cấu hình thiết bị của Cisco 
+    - Dùng cổng kết nối console 
+    - Dùng modem bên ngoài kết nối tới cổng routers để cấu hình từ xa
+#### Có 2 mode EXEC
+- User EXEC: Chỉ cho phép một số tác vụ cơ bản như `ping` hoặc `show`
+- Privileged EXEC: Có thể truy cập mọi tính năng của thiết bị, cả việc cấu hình và quản lí
+#### Using the Help Facility
+- Gõ 1 vài kí tự sau đó dùng dấu `?` (*sh?*) để hiện ra bảng gợi ý
+- Gõ dấu `?` để hiện tất cả những tùy chọn có. 
+#### CLI Navigation and Editing Shortcuts
+- Bảng phím tắt
+
+    | Cú pháp | Mô tả | 
+    | ------- | ---- |
+    | Up arrow hoặc Ctrl-P | Nhập lệnh vừa gõ | 
+    | Down arrow hoặc Ctrl-N | Đưa trở về lệnh trong trường hợp bị tua quá nhanh |
+    | Left arrow hoặc Ctrl-B | Di chuyển sang bên trái | 
+    | Right arrow hoặc Ctrl-F | Di chuyển sang bên phải |
+    | Tab | Hoàn thiện dòng lệnh |
+    | Backspace | Xóa kí tự | 
+    | Ctrl-A | Trỏ về đầu câu lệnh |
+    | Ctrl-E | Trỏ về cuối câu lệnh |
+    | Ctrl-C | Dừng thi hành câu lệnh |
+    | Ctrl-Z | Đưa về mode privileged EXEC |
+
+#### Command History 
+#### IOS Examination Commands
+#### Subconfiguration Modes
+
+| Lời nhắc | Tên Mode | 
+| -------- | -------- |
+| hostname(config)#  | Global |
+| hostname(config-line)# | Line |
+| hostname(config-if)# | Interface |
+| hostname(config-router)# | Router |
+
+## 2. Basic Switch Configuration Commands 
+- Bảng câu lệnh cơ bản 
+
+![1](/image/2021-04-01_14-34-13.png)
+
+## 3. Half-Duplex, Full-Duplex, and Port Speed 
+
+## 4. Verifying Network Connectivity
+- Lệnh `ping` là công cụ giúp kiểm tra kết nối của hệ thống 
+```
+C:\> ping 127.0.0.1 
+
+Pingging 127.0.0.1 with 32 bytes of data:
+
+Reply from 127.0.0.1: bytes=32 time<1ms TTL=64
+Reply from 127.0.0.1: bytes=32 time<1ms TTL=64
+Reply from 127.0.0.1: bytes=31 time<1ms TTL=64
+Reply from 127.0.0.1: bytes=31 time<1ms TTL=64
+
+Ping statistics for 127.0.0.1:
+    Packets: Sent = 4, Received = 4, Lost = 0 (0% loss),
+Approximate round trip times in milli-seconds:
+    Minimum = 0ms, Maximum = 0ms, Average = 0ms
+```
+- Lệnh `tracert` để kiểm tra tuyến đường đi kết nối giữa các IP.
+
+## 5. Troubleshoot Interface and Cable Issues
+
+![2](/image/2021-04-01_14-56-01.png)
+
+#### Interface Status and the Switch Configuration 
+- Sau khi `show interface` và kiểm tra trạng thái sẽ biết cổng `up` hoặc `down` và đây là một số trạng thái của LAN Switch 
+
+![3](/image/2021-04-01_15-04-53.png)
 
