--- a/03. VLAN và Trunking.md
+++ b/03. VLAN và Trunking.md
@@ -1,1 +1,53 @@
+# VLAN và Trunking 
 
+## VLAN Concepts 
+- Một số gợi ý để sử dụng VLAN 
+    - 1 nhóm người dùng theo phòng ban thay vì cùng một thiết bị vật lí.
+    - Chia thành các LAN nhỏ, để giảm thiểu việc quá tải trong mạng LAN.
+    - Giảm công việc của STP bằng cách chỉ cho VLAN đi vào switch bằng một cổng 
+    - Bảo mật dã liệu nhạy cảm giữa các VLAN 
+    - Tách IP thoại thành dữ liệu 
+    - Hỗ trợ khắc phục sự cố bằng cách giảm số lượng của domain 
+- Các kiểu Traffic
+
+| Phân loại | Mô tả |
+| --------- | ----- |
+| Network management | Để dễ khắc phục sự cố, một số nhà thiết kế đã chỉ định 1 vài VLAN riêng bảo quản lưu lượng mạng |
+| IP telephony | có 2 loại: thông tin tín hiệu giữa cuối và gói dữ liệu của cuộc gọi thoại. Mục đích để nâng cao chất lượng của cuộc gọi thoại | 
+| IP multicast | Sản xuất dữ liệu qua mạng. Swiches phải cấu hình để giữ traffic.
+| Normal data | Là kiểu dữ liệu liên quan đến file và xuất ra các dịch vụ, chia sẻ mạng cho ứng dụng | 
+| Scavenger class | Bao gồm tất cả traffic với giao thức vượt quá normal data. 
+
+- Các kiểu VLANs
+    - Default VLAN : Hay còn có tên gọi khác là VLAN1. Các thiết bị lớp 2 sử dụng một VLAn mặc định để đưa tất cả các cổng của thiết bị vào. Một số giao thức lớp 2 như CDP cần phải gửi tới một VLAN xác định trên đường trunk. Nên VLAN được chọn là Default VLAN.
+    - User VLAN: Là một VLAN được tạo ra nhằm tạo ra một nhóm người sử dụng không phụ thuộc vào vị trí địa lí
+    - Native VLAN: Là một VLAN có các cổng được cấu hình `trunk`. 
+    - Management VLAN: Đối với các thiết bị cho phép truy cập từ xa thì chúng được đặt vào trong 1 VLAn được gọi là Management VLAN. 
+
+## Trunking VLANs
+- Khi một liên kết giữa hai switch hoặc giữa một router và một switch truyền tải lưu lượng của nhiều VLAN thì cổng đó gọi là cổng `trunk`
+- Các thành viên trong cùng VLAN ở các switch khác nhau vẫn có thể giao tiếp với nhau. 
+#### Dynamic Trunking Protocol
+- Là giao thức mà các cổng trunk đàm phán với nhau. DTP quyết định trunk chỉ khhi cổng của switch được cấu hình trunk 
+
+![3](/image/2021-04-01_16-40-08.png)
+
+## VLAN configuration and Verification 
+- Trong ảnh là topo để cài `VLAN`
+![4](/image/2021-04-01_16-41-45.png)
+- Show cấu hình VLAN:
+![5](/image/2021-04-01_16-43-22.png)
+- Tạo VLANs
+![6](/image/2021-04-01_16-44-29.png)
+- Gán các port vào VLANs
+![7](/image/2021-04-01_16-45-33.png)
+- Show bảng VLANs
+![8](/image/2021-04-01_16-47-31.png)
+
+#### Extended VLANs
+- Trước khi mở rộng VLANs, mở các VLAN từ 1006 đến 4094, ta cần cấu hình switch sang chế độ `vtp mode transparent`
+
+## Trunking Configuration and Verification 
+- Ở trên, ta đã tạo các VLAN trước rồi thêm các port vào VLAN. 
+- Tại đây ta sẽ tạo VLAN và đặt địa chỉ cho VLAN. Vì tại SW lớp 2, ta không thể đặt địa chỉ trực tiếp nên ta phải dùng VLAN để kết nối với nhau. 
+![9](/image/2021-04-01_16-55-36.png)
