--- a/05. IPv4.md
+++ b/05. IPv4.md
@@ -1,1 +1,60 @@
 # IPv4 
+
+## Sơ lược
+- Được phát triển và ra đời năm: 1983.
+- Địa chỉ IPv4 bao gồm 32 bits; được chia thành 4 octets, mỗi octets gồm 8 bits.
+- Hiện tại, dù với không gian địa chỉ 2^32 nhưng vẫn không thể đáp ứng đủ được nhu cầu sử dụng mạng Internet và đang trở nên cạn kiệt
+- Để giải quyết vấn đề thiết hụt địa chỉ IPv4, ta dùng đến các kĩ thuật: NAT, subnetting, IPv6, ...
+
+## Phân loại 
+- Được chia thành 2 loại: Public (dành cho host trên Internet) hoặc Private (dành cho host trong mạng LAN)
+- Loại bỏ 2 địa chỉ đầu và cuối của dải mạng. 
+    - Địa chỉ đầu là địa chỉ mạng (Network Address)
+    - Địa chỉ cuối là địa chỉ broadcast.  
+- Broadcast Address là địa chỉ có các bit trong dải bằng 1. 
+- Địa chỉ gateway: tất cả máy tính đều kết nối đến thiết bị định tuyến. Modem là gateway, là cổng ra ngoài Internet. là cổng mặc định kết nối ra ngoài Internet. Trong 1 mạng LAN, có nhiều gateway. 
+- IPv4 gồm 5 lớp: 
+
+![1](/image/2021-04-02_14-56-31.png)
+
+- Lớp A gồm 1 octet `network` và 3 octets `host` 
+- Lớp B gồm 2 octets `network` và 2 octets `host`
+- Lớp C gồm 3 octets `network` và 1 octet `host` 
+
+### Private IP Addressing 
+- Dải private IP: 
+    - Class A: 10.0.0.0/8
+    - Class B: 172.16.0.0/12
+    - Class C: 192.168.0.0/16
+10101100.00011110.00000100.0
+![dải](/image/table-private-ip-addr.png)
+
+## Tác dụng của Subnet Mask
+- Xác định `Host` thuộc dải mạng nào
+- Xác định `Defaul Gateway` 
+- Chia nhỏ các mạng `LAN` 
+
+## Subnetting
+- Là việc phân chia mạng LAN lớn thành các mạng LAN nhỏ. Chia nhỏ theo các phòng ban. Mỗi phòng ban là 1 dải mạng (Network Address). 
+- Mượn bit của phần `host` trong dải địa chỉ mạng (Network Address)
+- Có 2 cách chia địa chỉ IPv4
+    - Chia đều theo từng nhóm, mỗi nhóm có số lượng địa chỉ IP bằng nhau. 
+        - Xác định chia thành bao nhiêu nhóm. VD: 3 nhóm thì cần mượn 2 bit của phần `host`. 2^2=4>3 để cung cấp đủ. 
+    - Chia theo số lượng host của mỗi nhóm. 
+        - Xét xem số lượng host của nhóm nào nhiều nhất thì ta ưu tiên chia trước. 
+- Ví dụ: 
+
+![2](/image/2021-04-02_15-36-05.png)
+
+- Ta chia từ LAN cần nhiều host nhất là LAN3. Ta cần mượn 8 bits vì 2^8=254>250 Host.  
+    - 32 bit - 8 bit = 24 bits. Vậy ta mượn 2 bit tại octet 3 là đủ 1 dải cho LAN3 và thừa 3 dải. (2^2=4)
+    - Gồm: Subnet 0: 172.30.4.0/24. Subnet 1: 172.30.5.0/24. Subnet 2: 172.30.6.0/24. Subnet 3: 172.30.7.0/24.
+
+## NAT
+- Là kĩ thuật dịch chuyển địa chỉ cho phép nhiều máy tính trong mạng LAN dùng 1 địa chỉ `IP Public` truy cập ra ngoài Internet.
+- Tât cả các IP Private trong mạng LAN trước khi truy cập Internet sẽ được ánh xạ ra một dải IP Public
+- Network address: so với subnetmask. Những địa chỉ còn lại không trùng với subnet mask sẽ bỏ đi. 
+- Broadcast: Khi các bit trong địa chỉ mạng = 1. 
+
+- IPv6 ra đời mục đích thay thế cho IPv4 đang dần cạn kiệt (1996). 
+- Gồm 128 bits. Gấp 4 lần địa chỉ IPv4
