--- a/06. IPv6.md
+++ b/06. IPv6.md
@@ -3,3 +3,29 @@
 ## Sơ lược
 - IPv6 ra đời mục đích thay thế cho IPv4 đang dần cạn kiệt (1996). 
 - Gồm 128 bits. Gấp 4 lần địa chỉ IPv4
+- Loại bỏ công nghệ NAT, có khả năng thư động cấu hình mà không cần sử dụng DHCP Server, cho phép các nút mạng sử dụng địa chỉ IP động. 
+
+## Quy tắc viết địa chỉ
+- Nếu trong 1 nhóm địa chỉ, có kí tự đầu bằng 0 thì ta bỏ số 0 đó đi. 
+- Có 2 hoặc nhiều hơn 4 số 0 liền nhau, ta có thể bỏ qua. Và ta chỉ được bỏ qua 1 lần duy nhất trong dải. 
+```
+2001 : 0DB8 : 1000 : 0000 : 0000 : 0000 : 0000 : 0001
+2001 : DB8 : 1000 : : 1
+```
+
+## Phân loại
+- Unicast 
+    - Global Unicast: `2000::/3`
+    - Link- Local: `FE80::/10`
+    - Loopback: Test và nhận diện : `::1/128`
+    - Embedded (liên kết với IPv4): `::/80`
+    - Unique Local: `FC00::/7` địa chỉ duy nhất
+    - Unspecified: Chưa phân loại `::/128`
+- Multicast
+    - Assigned: Cấp phát `FF00::/8`
+    - Solicited Node: Liên kết `FF02::1:FF00:0000/104`
+- Anycast: Ít sử dụng 
+
+## Cấp phát địa chỉ IPv6
+- Tự động cấp phát địa chỉ IPv6. 
+- Quy tắc EUI-64
