--- a/07.Basic Routing Concepts.md
+++ b/07.Basic Routing Concepts.md
@@ -1,1 +1,5 @@
 # Basic Routing Concept
+
+- Tìm hiểu quá trình gói dữ liệu được gửi từ nguồn tới đích. 
+- Tìm hiểu về các phương thức định tuyến: dây, tĩnh, động. Chủ yếu là định tuyến động. 
+
