--- a/07.Basic Routing Concepts.md
+++ b/07.Basic Routing Concepts.md
@@ -3,3 +3,50 @@
 - Tìm hiểu quá trình gói dữ liệu được gửi từ nguồn tới đích. 
 - Tìm hiểu về các phương thức định tuyến: dây, tĩnh, động. Chủ yếu là định tuyến động. 
 
+## Routing Methods
+- Router có thể học cách định tuyến bởi 3 nguồn: 
+    - Directly connected routes: Tự động thêm vào bảng định tuyến khi cổng khởi động 
+    - Static routes: Cấu hình thủ công bởi người quản trị 
+    - Dynamic routes: Học bởi các router đã được chia sẻ và dùng chung cách thức định tuyến.
+
+![1](/image/2021-04-05_13-19-56.png)
+
+## Classifying Dynamic Routing Protocols 
+- Các phương thức định tuyến được chia thành 3 nhóm theo đặc điểm:
+    - IGP hoặc EGP
+    - Distance vector or link state
+    - Classful or classless 
+- IGP và EGP 
+    - IGP là một giao thức để trao đổi thông tin định tuyến giữa các Gateway với các AS (Autonomous System)
+    - EGP được định tuyến bởi các hệ thống khác đi đến các mạng. 
+- Distance Vector Routing Protocols
+    - Định tuyến bằng cách quảng cáo như đường thẳng có khoảng cách và phương hướng. Nó sẽ chọn con đường đi tốt nhất dựa trên báo cáo của thiết bị định tuyến
+- Link-state routing protocols
+    - Phương thức này có thể tự nhìn một cách tổng quát về mô hình mạng bởi các thông tin từ tất cả router
+    - Cách thức này yêu cầu về các mặt kĩ thuật và trình độ của người quản trị. 
+- Classful Routing Protocols
+- Classess Routing Protocols
+
+## Dynamic Routing Metrics
+- Giá trị sinh ra để biết phương thức nào là tốt nhất và lựa chọn phù hợp theo giá trị và thông tin router có. 
+- Giá trị metrics càng nhỏ thì càng tốt 
+- Giá trị AD được cho ra đời với mục đích khi một tổ chức sử dụng nhiều phương thức truyền thông. Giá trị AD là độ tin cậy của giao thức đó. Giá trị AD càng nhỏ thì độ tin cậy của giao thức càng cao. 
+
+| Route Source | Giá trị AD |
+| ------------ | ---------- |
+| Connected | 0|
+| Static | 1 |
+| EIGRP summary route | 5 |
+| External BGP | 20 |
+| Internal EIGRP | 90 |
+| IGRP | 100 |
+| OSPF | 110 |
+| IS-IS | 115 |
+| RIP | 120 | 
+| External EIGRP | 170 |
+| Internal BGP | 200 |
+
+## Routing Loop Prevention 
+- Đây là sự ngăn chặn của việc lặp định tuyến trong hệ thống mạng. 
+
+## Link-State Routing Protocol Features 
