--- a/09.Static and Default Routing Overview.md
+++ b/09.Static and Default Routing Overview.md
@@ -1,21 +1,21 @@
 # Static and Default Routing Overview 
 
-- TiÌm hiêÒu kiŞ vêÌ static Routing. 
-- KiêÒm soaìt lıu lıõòng vaÌ thiêìt lâòp default route ra ngoaÌi doanh nghiêòp. 
+- Tim hiu ki v static Routing. 
+- Kim soat lu lng va thit lp default route ra ngoai doanh nghip. 
 
 ## Static and Default Routing Overview
-- DuÌng trong trıõÌng hõòp
-    - Mô hiÌnh maòng nhoÒ vaÌ chiÒ yêu câÌu ğõn giaÒn vêÌ ğiònh tuyêìn 
-    - Mô hiÌnh maòng Hub-and-Spoke (kêìt nôìi tâòp trung)
-    - Taòo nhanh `ad hoc route`
-    - Ğıõòc duÌng ğêÒ laÌm phıõng aìn dıò phoÌng 
-- Không nên duÌng trong trıõÌng hõòp 
-    - Mô hiÌnh maòng lõìn 
-    - Mô hiÌnh maòng chıa côì ğiònh, coì thêÒ mõÒ rôòng. 
-- Static route (ğiònh tuyêìn tiŞnh) ğıõòc sıÒ duòng trong trıõÌng hõòp ğiònh tuyêìn maòng lõìn ğêìn stub network (truy câòp bõÒi 1 ğıõÌng link duy nhâìt) 
+- Dung trong trng hp
+    - M hinh mang nho va chi yu cu n gian v inh tuyn 
+    - M hinh mang Hub-and-Spoke (kt ni tp trung)
+    - Tao nhanh `ad hoc route`
+    - c dung  lam phng an d phong 
+- Khng nn dung trong trng hp 
+    - M hinh mang ln 
+    - M hinh mang cha c inh, co th m rng. 
+- Static route (inh tuyn tinh) c s dung trong trng hp inh tuyn mang ln n stub network (truy cp bi 1 ng link duy nht) 
 
 ## IPv4 Static Route Configuration 
-- Câìu hiÌnh theo mâŞu
+- Cu hinh theo mu
 
 #### IPv4 Static Routes Using the Next-Hop Parameter
 
