--- a/07.Basic Routing Concepts.md
+++ b/07.Basic Routing Concepts.md
@@ -3,31 +3,54 @@
 - Tìm hiểu quá trình gói dữ liệu được gửi từ nguồn tới đích. 
 - Tìm hiểu về các phương thức định tuyến: dây, tĩnh, động. Chủ yếu là định tuyến động. 
 
-## Routing Methods
-- Router có thể học cách định tuyến bởi 3 nguồn: 
+## 1. Packet Forwarding
+
+![1](/image/2021-04-06_13-50-25.png)
+
+### Bước 1: PC1 muốn gửi tập tin đến PC2
+- PC1 xác định IP nguồn và IP đích trên các mạng khác. 
+- Sau đó, PC1 kiểm tra bảng ARP để tìm địa chỉ Default Gateway và liên kết địa chỉ MAC. 
+- Nó đóng gói tập tin và gửi đến R1
+### Bước 2: Router R1 nhận gói tin 
+- R1 kiểm ra địa chỉ MAC đích, trùng khớp với địa chỉ MAC của cổng nhận thì nó sẽ sao chép frame bên trong để xử lí 
+- R1 loại bỏ Ethernet frame và đọc địa chỉ IP đích. Vì không nối trực tiếp đến mạng dây nào, nên router sẽ tìm kiếm trong bảng định tuyến để tìm đường cho tập tin.
+- R1 tìm theo địa chỉ mạng và subnet mask, nơi chứa IP đích hay còn gọi là địa chỉ host của mạng. Nó chọn chuyển tới kết nối dài nhất. R1 đóng gói phù hợp cho gói tin và chuyển tới cổng.
+- Cổng sẽ chuyển tiếp tập tin đến NextHop
+### Bước 3: Tập tin đến Router R2
+- Thực hiện chức năng như Router R1, chỉ khác là cổng ra lần này là dùng serial interface (kết nối vật lí) 
+- R2 đóng gói tập tin phù hợp với cổng serial và chuyển tới R3
+- Trong ví dụ này ta dùng HDLC (High-Level Data Link Control)
+### Bước 4: Gói tin đến R3
+- R3 gỡ bỏ HDLC frame. Kết quả của bảng định tuyến là R3 kết nối trực tiếp tới mạng. Vì cổng ra của R3 kết nối Ethernet, nên R3 cần phân giải địa chỉ IP của tập tin đến địa chỉ MAC đích.
+- R3 tìm địa chỉ IP đích của gói tin 192.168.4.10 bằng cơ chế ARP. Nếu đầu vào không trong cơ chế ARP, R3 sẽ gửi bản tin yêu cầu ARP tới cổng G0/0. PC2 sẽ gửi lại ARP phản hồi cùng với địa chỉ MAC. R3 sẽ gửi bản tin theo địa chỉ MAC
+- Gói tin Ip được đóng gói và gửi ra khỏi R3 bởi cổng G0/0
+### Bước 5: Gói tin đến PC2
+-    PC2 kiểm tra địa chỉ MAC đích, nếu trùng khớp với địa chỉ cổng. PC2 sẽ sao chép và thấy định dạng file, đồng nghĩa với Ethernet frame giữ thông tin trong tập tin. PC2 gỡ bỏ Ethernet frame và hoàn tất việc gửi gói tin IP. 
+## 2. Routing Methods
+
+### 2.1 Router có thể học cách định tuyến bởi 3 nguồn: 
     - Directly connected routes: Tự động thêm vào bảng định tuyến khi cổng khởi động 
     - Static routes: Cấu hình thủ công bởi người quản trị 
     - Dynamic routes: Học bởi các router đã được chia sẻ và dùng chung cách thức định tuyến.
 
-![1](/image/2021-04-05_13-19-56.png)
+![2](/image/2021-04-05_13-19-56.png)
 
-## Classifying Dynamic Routing Protocols 
-- Các phương thức định tuyến được chia thành 3 nhóm theo đặc điểm:
+## 3. Classifying Dynamic Routing Protocols 
+- Các phương thức định tuyến được chia thành 3 nhóm theo các đặc điểm khác nhau:
     - IGP hoặc EGP
     - Distance vector or link state
     - Classful or classless 
-- IGP và EGP 
-    - IGP là một giao thức để trao đổi thông tin định tuyến giữa các Gateway với các AS (Autonomous System)
-    - EGP được định tuyến bởi các hệ thống khác đi đến các mạng. 
-- Distance Vector Routing Protocols
+### 3.1 IGP và EGP 
+- IGP là một giao thức để trao đổi thông tin định tuyến giữa các Gateway với các AS (Autonomous System)
+- EGP được định tuyến bởi các hệ thống khác đi đến các mạng. 
+### 3.2 Distance Vector Routing Protocols
     - Định tuyến bằng cách quảng cáo như đường thẳng có khoảng cách và phương hướng. Nó sẽ chọn con đường đi tốt nhất dựa trên báo cáo của thiết bị định tuyến
-- Link-state routing protocols
+### 3.3 Link-state routing protocols
     - Phương thức này có thể tự nhìn một cách tổng quát về mô hình mạng bởi các thông tin từ tất cả router
     - Cách thức này yêu cầu về các mặt kĩ thuật và trình độ của người quản trị. 
-- Classful Routing Protocols
-- Classess Routing Protocols
+### 3.4 Classful/Classess Routing Protocols
 
-## Dynamic Routing Metrics
+## 4. Dynamic Routing Metrics
 - Giá trị sinh ra để biết phương thức nào là tốt nhất và lựa chọn phù hợp theo giá trị và thông tin router có. 
 - Giá trị metrics càng nhỏ thì càng tốt 
 - Giá trị AD được cho ra đời với mục đích khi một tổ chức sử dụng nhiều phương thức truyền thông. Giá trị AD là độ tin cậy của giao thức đó. Giá trị AD càng nhỏ thì độ tin cậy của giao thức càng cao. 
@@ -46,7 +69,14 @@
 | External EIGRP | 170 |
 | Internal BGP | 200 |
 
-## Routing Loop Prevention 
+## 5. Routing Loop Prevention 
 - Đây là sự ngăn chặn của việc lặp định tuyến trong hệ thống mạng. 
 
-## Link-State Routing Protocol Features 
+## 6. Link-State Routing Protocol Features 
+- Giao thức Link-State gửi bản cập nhật đến các router hàng xóm, nơi chuyển tiếp thông tin đến các hàng xóm. 
+- Giống như giao thức vector khoảng cách, router sẽ chọn giao thức link-state tốt nhất để thêm vào bảng định tuyến, dựa trên metrics. 
+- Có 2 loại của giao thức định tuyến dùng thuật toán mà có ít điểm chung 
+#### 6.1 LSDB
+- Router sử dụng link-state database để tính toán con đường tốt nhất đến các subnet.
+#### 6.2 Dijkstra Algorithm
+- Dựa trên LSDB, mối router phải tự nhìn và coi mình là điểm bắt đầu, subnet là đích, và dùng thuật toán Dijkstra để xây dựng SPF tree (Dijkstra Shortest Path First) để tìm đường định tuyến cho mỗi subnet.
