--- a/08. Basic Router Configuration.md
+++ b/08. Basic Router Configuration.md
@@ -2,3 +2,39 @@
 
 - Cấu hình theo mẫu, gõ lệnh
 
+## 1. Basic Router Configuration with IPv4 
+
+![1](/image/2021-04-06_15-03-52.png)
+
+```
+Router> enable
+Router# config t
+Router(config)# hostname R1
+R1(config)# enable secret class
+```
+
+- Đăng nhập vào cổng và đặt địa chỉ 
+```
+R1(config)# interface Serial0/0/0
+R1(config-if)# ip address 192.168.2.1 255.255.255.0
+```
+- Kích hoạt cổng 
+` R1(config-if)# no shutdown `
+
+## 2. Verification Example 
+- Dùng lệnh `show ip route` để hiển thị bảng định tuyến
+
+## 3. Basic Router Configuration with IPv6
+
+## 4. Verifying IPv4 and IPv6 Network Connectivity
+- Lệnh ping dùng để kiểm tra kết nối tới Router
+
+*Chú ý: Trong suốt quá trình học CCNA và luyện tập làm lab, hầu như bạn chỉ dùng cấu hình Telnet để truy cập từ xa và là công cụ cho bài lab của bạn. mặc dù Telnet dễ hơn sử dụng SSH, nhưng hãy nhớ rằng SSH là bài tập tốt nhất. Vậy, trong suốt CCNA, hãy chuẩn bị sử dụng SSH để điều khiển từ xa để mô phỏng câu hỏi vì Telnet có thể không thể cấu hình hoặc cho phép*
+
+## 5. Basic IP Addressing Troubleshooting 
+- Nếu bạn chắc chắn cấu hình đúng địa chỉ IP và subnet mask, sau đó gặp vấn đề với địa chỉ IP thì thường kết quả là do default gateway hoặc duplicate address
+
+#### 5.1 Default Gateway
+- Default Gateway được sử dụng khi host muốn gửi tập tin tới thiết bị ở mạng khác. Địa chỉ default gateway được coi là cổng của router kết nối tới mạng local 
+
+#### 5.2 Duplicate IP Addresses
