--- a/09. Static and Default Routing Overview.md
+++ b/09. Static and Default Routing Overview.md
@@ -16,8 +16,11 @@
 ## IPv4 Static Route Configuration
 - Cấu hình theo mẫu 
 
+![1](/image/2021-04-06_16-13-46.png)
+
 #### IPv4 Static Routes Using the Next-Hop Parameter
 
 #### IPv4 Static Routes Using the Exit Interface Parameter
-
+- Định tuyến thông qua cổng kết nối giữa các thiết bị
 #### IPv4 Default Route Configuration
+- Định tuyến tới mọi máy qua cổng kết nối 
