--- a/10.VTP and Inter-VLAN Routing Configuration.md
+++ b/10.VTP and Inter-VLAN Routing Configuration.md
@@ -1,1 +1,10 @@
 # VTP and Inter-VLAN Routing Configuration
+- Cấu hình, xác nhận, và sửa lỗi kết nối giữa các switch
+- Cấu hình, xác nhận và sửa lỗi inter-VLAN
+
+## VTP Concepts
+- VLAN Trunking Protocol (VTP) làm việc lại lớp 2 nhằm duy trì cấu hình của các VLAN khi thêm hoặc xóa, thay đổi của VLAN đi qua mạng.
+- Khi thiết lập Trunk, các máy ở chung 1 VLAN có thể giao tiếp với nhau.
+## Inter-VLAN Routing Concepts
+- Inter-VLAN kết nối với nhau mà không cần sử dụng các thiết bị Layer3. 
+- Khi ở trong VLAN, ta muốn sử dụng dịch vụ được cung cấp bởi một VLAN khác thì ta cần dùng đến `inter-vlan`
