--- a/10.VTP and Inter-VLAN Routing Configuration.md
+++ b/10.VTP and Inter-VLAN Routing Configuration.md
@@ -3,8 +3,68 @@
 - Cấu hình, xác nhận và sửa lỗi inter-VLAN
 
 ## VTP Concepts
-- VLAN Trunking Protocol (VTP) làm việc lại lớp 2 nhằm duy trì cấu hình của các VLAN khi thêm hoặc xóa, thay đổi của VLAN đi qua mạng.
+- VLAN Trunking Protocol (VTP) làm việc lại lớp 2 nhằm duy trì cấu hình nhất quán của các VLAN khi thêm hoặc xóa, thay đổi của VLAN đi qua mạng.
 - Khi thiết lập Trunk, các máy ở chung 1 VLAN có thể giao tiếp với nhau.
+- Các thành phần của VTP:
+ 
+| Thành phần  | Ý nghĩa      |
+|-------------|-------------|
+| VTP domain     |Một miền VTP gồm 1 hoặc nhiều Switch kết nối với nhau. |
+||Mọi Switch nằm trong miền chia sẻ cấu hình VLAN với nhau sử dụng VTP advertisements|  
+||Switch ở các VTP domain khác nhau không trao đổi VTP với nhau|
+||Router hoặc Switch L3 xác định ranh giới giữa các miền|
+| VTP advertisements  | Mỗi Switch trong VTP domain gửi cấu hình quảng bá định kỳ từ mỗi cổng trunk đến một địa chỉ multicast  |
+||Các Switch lân cần nhận những quảng bá này và cập nhật VTP của nó và VLAN nếu cần thiết|
+| VTP modes  |Một Switch có thể được cấu hình với 1 trong 3 chế độ: Server, Client, Tranparent|          
+| VTP password    |Cấu hình mật khẩu cho Switch trong miền VTP|
+- Các chế độ
+
+| Chế độ VTP | Ý nghĩa | 
+| -------------- | ------- |
+| VTP server | VTP server quảng bá thông tin các VLAN trong miền đến các Switch đã kích hoạt VTP trong cùng một miền |
+|  | VTP server lưu trữ thông tin về VLAN cho toàn bộ miền trong NVRAM |
+|  | VTƠ server là nơi tạo, xóa, đổi tên VLAN |
+| VTP Client | Chức năng giống như VTP server nhưng không thể tạo, xóa, đổi tên VLAN |
+|  | VTP Client lưu thông tin của VLAN cho tất cả các miền chỉ khi Switch được bật | 
+|  | Phải cấu hình chế độ Client ở Switch | 
+| VTP transparent | Transparent Switch không liên quan đến VTP ngoại trừ để chuyển tiếp quảng bá VTP đến VTP Client và VTP server | 
+- Chức năng các chế độ:
+
+| Chức năng          | Server      | Client | Tranparent
+| ------------- | ------------- | ------------- | ------------- |
+|Gửi thông báo VTP chỉ qua ISL hoặc 802.1Q|Có|Có|Có|
+|Cho phép cấu hình CLI|Có|Không|Có|
+|Dùng phạm vi bình thường của VLAN (1-1005)|Có|Có|Có|
+|Dùng phạm vi mở rộng của VLAN (1-1005)|Không|Không|Có|
+|Đồng bộ bằng chính cấu hình cơ sở dữ liệu khi nhận thông tin VTP với số Revison cao hơn|Có|Có|Không|
+|Tạo và gửi cập nhật VTP định kỳ mỗi 5 phút|Có|Có|Không|
+|Không xử lý cập nhật VTP nhưng cho phép nhận cập nhật VTP ra các trunk khác|Không|Không|Có|
+
+
 ## Inter-VLAN Routing Concepts
-- Inter-VLAN kết nối với nhau mà không cần sử dụng các thiết bị Layer3. 
+- Inter-VLAN kết nối với nhau sử dụng các thiết bị Layer3. 
 - Khi ở trong VLAN, ta muốn sử dụng dịch vụ được cung cấp bởi một VLAN khác thì ta cần dùng đến `inter-vlan`
+### Legacy Inter-VLAN Routing 
+- Cách định tuyến này yêu cầu nhiều interfaces vật lí trên cả router và switch. Khi sử dụng Router để định tuyến inter-VLAN, interface của Router có thể kết nối tới các VLAN riêng biệt. Thiết bị ở các VLAN đó gửi lưu lượng thông qua Router đến các VLAN khác. 
+
+![1](/image/2021-04-07_14-05-46.png)
+
+- Mỗi interface của S2 nối với R1 được thiết lập thành 1 VLAN. Như vậy mỗi interface tách rời được dùng cho 1 VLAN khiến việc interface trên router nhanh bị đầy. 
+### Router on a Stick 
+- Các phần mềm của Router hiện nay cho phép cấu hình một interface với nhiều đường trunk bằng cách sử dụng subinterface. 
+
+![2](/image/2021-04-07_14-14-50.png)
+- Interface vật lí G0/0 chia nhỏ thành 2 interface logic. Cấu hình trunk cho cả VLAN10 và VLAN30, mỗi subinterface được thiết lập với các VLAN khác nhau. 
+### Multilayer Switch 
+- Router on a stick có thể làm việc tốt với mô hình doanh nghiệp nhỏ chỉ có từ 1-2 router. 
+- Giải pháp mở rộng cho mạng doanh nghiệp hiện nay sẽ sử dụng một `multilayer switch` để thay thế Router và Switch. Nó thực hiện được cả việc chuyển mạch dữ liệu cùng 1 VLAN và định tuyến dữ liệu giữa các VLAN. 
+
+![3](/image/2021-04-07_14-56-55.png)
+- Mộ số lí do `multilayer switch` được sử dụng phổ biến 
+    - Router có giới hạn về số lượng interface để kết nối mạng
+    - Giới hạn lưu lượng có thể đáp ứng ở trên liên kết vật lý tại một thời điểm
+    - Với `multilayer Switch`, gói tin có thể chuyển tiếp với một đường trunk. 
+
+## Cấu hình Router on a Stick 
+
+## Cấu hình Multilayer Switch Inter-VLAN Routing
