--- a/11. OSPF Operation.md
+++ b/11. OSPF Operation.md
@@ -1,1 +1,50 @@
 # OSPF Operation
+- Cấu hình OSPFv2 cho mô hình single area và multiarea 
+
+## 1. Single-Area OSPF Operation 
+- OSPF được chọn sử dụng như một giao thức IGP
+### 1.1 OSPF Packet Types
+- Có 5 loại bản tin được chia theo mục đích của quá trình định tuyến. 
+    - Hello: Thiết lập và duy trì với các router sử dụng OSPF khác.
+    - DBD: Chứa danh sách tập tin mô tả ngắn gọn link-state được Router gửi đi. Routers nhận sẽ sử dụng danh sách này để đối chiếu. 
+    - LSR: Routers nhận có thể yêu cầu thêm thông tin trong các tập tin DBD bằng cách gửi LSR
+    - LSU: Bản tin trả lời LSR và thông báo thông tin mới.
+    - LSAck: Khi bản tin LSU được nhận, router sẽ gửi LSAck để xác nhận.
+- Gói tin Hello được dùng để:   
+    - Tìm OSPF kết nối lân cận và thiết lập kết nối 
+    - Quảng bá tham số mà trên đó 2 Router phải cùng đồng ý để có kết nối 
+    - Chọn DR và BDR
+    - Trước khi 2 Router thiết lập kết nối, cả 2 Router phải là một phần của một mạng 
+### 1.2 OSPF DR và BDR
+- Designated Router là router trong 1 ospf router có nhiệm vụ nhận tất cả các thông tin định tuyến của các router khác gửi về và chuyển nó tới các router còn lại 
+- Backup Designated router là bộ định tuyến có nhiệm vụ dự phòng cho DR
+- Mục đích là để làm giảm bớt lưu lượng OSPF trên mạng đa truy nhập
+### 1.3 OSPF Algorithm 
+- OSPF sử dụng thuật toán Shortest Path First (SPF) để tính toán `costs` mỗi đường đi từ nguồn đến đích. 
+### 1.4 Quá trình định tuyến Link-State
+- Link State không gửi bảng định tuyến, mà chỉ gửi tình trạng của các đường link trong linkstate-database của mình cho các router khác, các router sẽ sử dụng thuật toán SPF để tự xây dựng bảng định tuyến. 
+1. Mỗi Router học chính kết nối của nó và kết nối trực tiếp của nó với mạng bằng cách phát hiện interface ở trạng thái "up" 
+2. Mỗi Router có trách nhiệm kết nối lân cận với các Router lân cận trên đường kết nối trực tiếp với mạng bằng cách gửi gói `hello`
+3. Mỗi Router xây dựng một Link-State packet (LSP) gồm trạng thái của mỗi kết nối trực tiếp. 
+4. Mỗi Router `flood` LSP tới tất cả hàng xóm. 
+5. Mỗi Router sẽ tính toán đường dẫn tốt nhất đến mạng đích. 
+## 2. Multiarea OSPF Operation 
+- Single-area OSPF chỉ làm việc tốt với môi trường mạng nhỏ, với số lượng đường dẫn có thể kiểm soát được. 
+- Với mô hình mạng lớn thì single-area sẽ gặp một số vấn đề 
+    - Large routing tables: Mặc định OSPF sẽ không cập nhật định tuyến.
+    - Large link-state database(LSDB): Mỗi một router sẽ cần phải lưu trữ dữ liệu của đường dẫn đã được kích hoạt
+    - Frequent SPF calculations: Trong mô hình mạng lớn, thay đổi LSDB có thể khiến router dùng nhiều CPU để tính toán SPF và cập nhật bảng định tuyến.
+## 3. Thiết kế Multiarea OSPF 
+![3](/image/2021-04-07_16-52-13.png)
+- Đặt tất cả các interface được kết nối chung mọt subnet trong cùng area.
+- Một area nên được nối tiếp 
+- Một số Router có thể nằm trong một Area, với tất cả interface trong một single area.
+- Một số Router có thể là ABR 
+- Tất cả các area không phải lõi thì kết nối với area lõi (area 0)
+
+### 3.1 Phân loại
+- Internal Routers (IRs): Là các router nội vùng, kết nối trực tiếp với nhau thuộc cùng một Area của OSPF. Chỉ có 1 Link-State Database
+- Area Border Routers (ABRs): Là Router biên, kết nối đến nhiều Area của OSPF. Kết nối trực tiếp đến Backbone-Area và là thành viên của một Area khác. 
+- Autonomous System Boundary Routers (ASBRs): Là router kết nối đến một hoặc nhiều AS khác, hoặc kết nối với các mạng khác có giao thức định tuyến khác
+- Backbone Routers (BRs): Là router chỉ thuộc Backbone-Area, không kết nối với Area khác. 
+- Backbone area: Là một OSPF ara đặc biệt, nơi mà tất cả các area phải kết nối đến, ví dụ Area 0
